file(GLOB_RECURSE TEST_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cc)
foreach(test_file ${TEST_FILES})
   get_filename_component(test_filename ${test_file} NAME_WE)
   add_executable(${test_filename} ${test_file})
   set(TEST_LIBRARIES menu-lib)
   if("${test_filename}" MATCHES "_benchmark")
      list(APPEND TEST_LIBRARIES benchmark::benchmark)
   endif()
   target_link_libraries(${test_filename} ${TEST_LIBRARIES})
endforeach()
